# University-Project

./: README.md  hex.txt  main.c
CP-problem/: check.c  p1.c  p2.c  p3.c  tekst.txt
Console_RPG/: Armor.cpp  Armor.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Events.cpp  Events.h  Game.cpp  Game.h  Gauntlet.cpp  Gauntlet.h  Helmet.cpp  Helmet.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Legs.cpp  Legs.h  Puzzle.cpp  Puzzle.h  Torso.cpp  Torso.h  Weapon.cpp  Weapon.h  dArray.cpp  dArray.h  main.cpp
Elevator/: Arduino.ino  FBD_Diagram.lsc  LD_Diagram.lld
Lending-SQL/: Instrukcja_deinstalacji.txt  Instrukcja_instalacji.txt  PROJECT_VIEW.sql  PR_CREATE_DB.sql  PR_DELETE_DB.sql  PR_INSERT_ALL.sql  logiczny.dmd
Lending-SQL/logiczny/: dl_settings.xml  dmd_open.local
Lending-SQL/logiczny/businessinfo/: Business Information.xml
Lending-SQL/logiczny/datatypes/: DDLSelection.local  DataTypes.xml  Diagrams.local  Objects.local
Lending-SQL/logiczny/datatypes/subviews/: F6699B10-042D-2023-81A1-17A2F2B51289.xml
Lending-SQL/logiczny/logical/: Diagrams.local  Logical.xml  Objects.local
Lending-SQL/logiczny/logical/subviews/: 0BAD9797-012A-0A86-918F-87FF722B8861.xml
Lending-SQL/logiczny/mapping/: ExtendedMap_RMEB84ADC4-64C6-B080-C3A3-2F9F23ED9DC5.xml
Lending-SQL/logiczny/pm/: Process Model.xml
Lending-SQL/logiczny/rel/: EB84ADC4-2F9F23ED9DC5.xml
Lending-SQL/logiczny/rel/EB84ADC4-2F9F23ED9DC5/: DDLSelection.local  Diagrams.local  Objects.local
Promy-na-rzece/: README.md  pom.xml
Promy-na-rzece/src/main/java/: module-info.java
(+48 files in other folders)
